loopfor.LoopStairs.scala.error
Erreur de compilation :
LoopStairs:32: error: '(' expected but identifier found.
for i <-1 to 3{
    ^LoopStairs:36: error: illegal start of simple expression
	}
        ^